Update pdf datasheet

--- a/assets/styles.css.liquid
+++ b/assets/styles.css.liquid
@@ -15504,7 +15504,9 @@ button#search_postcode {
   border: 1px solid #e35359;
   padding: 4px 2px;
 }
-
+a.show_pdf {
+  border-bottom: unset;
+}
 
 
 @media(min-width:1441px) {
