--- a/snippets/metafield_table.liquid
+++ b/snippets/metafield_table.liquid
@@ -62,7 +62,7 @@
               </td>
               <td>
                 {% if parsed_metafield.type == "link" %}
-                    <a href="{{ parsed_metafield.value.url }}" target="_blank">
+                    <a class="show_pdf" href="{{ parsed_metafield.value.url }}" target="_blank">
                       <?xml version="1.0" encoding="iso-8859-1"?>
                       <!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
                       <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
